--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -9,11 +9,11 @@
 {% endblock %}
 
 {% block navbar %}
-<div class="navbar-fixed-top collapse navbar-collapse" id="bs-example-navbar-collapse-1" role="navigation">
+<div class="navbar-fixed-top navbar" role="navigation">
   <ul class="nav navbar-nav">
-    <a class="navbar-brand" href="/"><img src="{{ url_for('static',filename='img/diverti.png') }}" alt="diverti.png" class="img-accueil"> </a>
+    <!--<a href="/"><img src="{{ url_for('static',filename='img/diverti.png') }}" alt="diverti.png" class="img-accueil"> </a>-->
     <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Quatuor <b class="caret"></b></a>
+      <a href="#">Quatuor</a>
       <ul class="dropdown-menu">
         <li><a href="/quatuor/presentation/">Présentation</a></li>
         <li><a href="/quatuor/repertoire/">Repertoire</a></li>
@@ -22,7 +22,7 @@
       </ul>
     </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Stage <b class="caret"></b></a>
+          <a href="#">Stage</a>
           <ul class="dropdown-menu">
             <li><a href="/stage/presentation/">Présentation</a></li>
             <li><a href="/stage/inscription/">Inscription</a></li>
@@ -40,16 +40,16 @@
         {% endif %}
       </ul>
     </li>
-    <li><a class="dropdown-toggle" href="/quatuor/concerts/">Concerts</a></li>
+    <li><a href="/quatuor/concerts/">Concerts</a></li>
     <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Autour de la clarinette <b class="caret"></b></a>
+      <a href="#">Autour de la clarinette</a>
       <ul class="dropdown-menu">
         <li><a href="/autourClarinette/historique/">Historique</a></li>
         <li><a href="/autourClarinette/informations/">Informations</a></li>
       </ul>
     </li>
     <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contact <b class="caret"></b></a>
+      <a href="#">Contact</a>
       <ul class="dropdown-menu">
         <li><a href="/contact/administratif/">Administratif</a></li>
         <li><a href="/contact/mentionsLegales/">Mentions Legals</a></li>
@@ -59,12 +59,12 @@
         <li><a href="/contact/musical/">Musical</a></li>
       </ul>
     </li>
-    <li><a class="dropdown-toggle" href="/other/liens/">Liens</a></li>
+    <li><a href="/other/liens/">Liens</a></li>
     {% if current_user.is_authenticated %}
     <li><a>{{ current_user.username }}</a></li>
     <li><a href="/other/deconnexion/"><span class="glyphicon glyphicon-log-out"></span></a></li>
     {% else %}
-    <li id="tab-connect"><a class="dropdown-toggle" href="/other/connexion/">Connexion  <span class="glyphicon glyphicon-log-in" id="id"></span></a></li>
+    <li id="tab-connect"><a href="/other/connexion/">Connexion  <span class="glyphicon glyphicon-log-in" id="id"></span></a></li>
     {% endif %}
   </ul>
 </div><!-- /.navbar-collapse -->
