--- a/Developpement/templates/administration/administration_creerStage.html
+++ b/Developpement/templates/administration/administration_creerStage.html
@@ -25,16 +25,16 @@
     <div class="col-sm-3">{{ creaStageForm.dateFinSt(size=50, class="form-control", type="date", placeholder="YYYY-MM-DD")}}</div>
   </div>
   <div class="form-group">
-    <label for="adresseSt" class="col-sm-3 control-label">{{creaStageForm.adresseSt.label}}</label>
-    <div class="col-sm-3">{{ creaStageForm.adresseSt(size=50, class="form-control", placeholder="Adresse")}}</div>
+    <label for="adresseSt" class="col-sm-3 control-label">{{lieuForm.adrLieu.label}}</label>
+    <div class="col-sm-3">{{ lieuForm.adrLieu(size=50, class="form-control", placeholder="Adresse")}}</div>
   </div>
   <div class="form-group">
-    <label for="cpSt" class="col-sm-3 control-label">{{creaStageForm.cpSt.label}}</label>
-    <div class="col-sm-3">{{ creaStageForm.cpSt(size=50, class="form-control", placeholder="Code Postal")}}</div>
+    <label for="cpSt" class="col-sm-3 control-label">{{lieuForm.CPLieu.label}}</label>
+    <div class="col-sm-3">{{ lieuForm.CPLieu(size=50, class="form-control", placeholder="Code Postal")}}</div>
   </div>
   <div class="form-group">
-    <label for="villeSt" class="col-sm-3 control-label">{{creaStageForm.villeSt.label}}</label>
-    <div class="col-sm-3">{{ creaStageForm.villeSt(size=50, class="form-control", placeholder="Ville")}}</div>
+    <label for="villeSt" class="col-sm-3 control-label">{{lieuForm.villeLieu.label}}</label>
+    <div class="col-sm-3">{{ lieuForm.villeLieu(size=50, class="form-control", placeholder="Ville")}}</div>
   </div>
   <div class="form-group">
     <label for="descSt" class="col-sm-3 control-label">{{creaStageForm.descSt.label}}</label>
