--- a/Developpement/static/styles/css/base.css
+++ b/Developpement/static/styles/css/base.css
@@ -35,17 +35,11 @@ body{
   color: white;
 }
 
-.navbar-nav img{
-  height: 250%;
-  margin-left: -30%;
-  margin-top: -18%;
-}
-
 .navbar{
   background-color: black;
 }
 
-.navbar-nav:hover .dropdown-toggle:hover{
+.navbar-nav:hover .dropdown>a:hover{
   background-color: lightgrey;
   color: black;
 }
@@ -55,8 +49,7 @@ li.dropdown:hover > .dropdown-menu {
 }
 
 .img-accueil {
-  height: 150%;
-  width: 150%;
+  height: 100%;
 }
 
 /*  Fin du menu de navigation  */
