--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -9,20 +9,30 @@
 {% endblock %}
 
 {% block navbar %}
-<div class="navbar-fixed-top navbar" role="navigation">
-  <ul class="nav navbar-nav">
-    <!--<a href="/"><img src="{{ url_for('static',filename='img/diverti.png') }}" alt="diverti.png" class="img-accueil"> </a>-->
-    <li class="dropdown">
-      <a href="#">Quatuor</a>
-      <ul class="dropdown-menu">
-        <li><a href="/quatuor/presentation/">Présentation</a></li>
-        <li><a href="/quatuor/repertoire/">Repertoire</a></li>
-        <li><a href="/quatuor/extrait/0">Extrait</a></li>
-        <li><a href="/quatuor/presse/all/0">Presse</a></li>
-      </ul>
-    </li>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Quatuor Divertimento</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
         <li class="dropdown">
-          <a href="#">Stage</a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Quatuor <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/quatuor/presentation/">Présentation</a></li>
+            <li><a href="/quatuor/repertoire/">Repertoire</a></li>
+            <li><a href="/quatuor/extrait/0">Extrait</a></li>
+            <li><a href="/quatuor/presse/all/0">Presse</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stage <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/stage/presentation/">Présentation</a></li>
             <li><a href="/stage/inscription/">Inscription</a></li>
@@ -30,44 +40,48 @@
             <li><a href="/stage/presse/">Presse</a></li>
             <li><a href="/stage/recettes/">Recettes</a></li>
 
+            {% if current_user.is_authenticated %}
+
+            <li><a href="/stage/repertoire/">Repertoire</a></li>
+            <li><a href="/stage/partitions/">Partitions</a></li>
+            <li><a href="/stage/souvenirs/">Souvenirs</a></li>
+            <li><a href="/stage/paiement/">Paiement</a></li>
+
+            {% endif %}
+          </ul>
+        </li>
+        <li><a href="/quatuor/concerts/">Concert</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Autour de la clarinette <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/autourClarinette/historique/">Historique</a></li>
+            <li><a href="/autourClarinette/informations/">Informations</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contact <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/contact/administratif/">Administratif</a></li>
+            <li><a href="/contact/mentionsLegales/">Mentions Legals</a></li>
+            <li><a href="/contact/renseignements/">Renseignements</a></li>
+            <li><a href="/contact/ficheTechnique/">Fiche Technique</a></li>
+            <li><a href="/contact/plaquette/">Plaquette</a></li>
+            <li><a href="/contact/musical/">Musical</a></li>
+          </ul>
+        </li>
+        <li><a href="#about">Liens</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
         {% if current_user.is_authenticated %}
-
-        <li><a href="/stage/repertoire/">Repertoire</a></li>
-        <li><a href="/stage/partitions/">Partitions</a></li>
-        <li><a href="/stage/souvenirs/">Souvenirs</a></li>
-        <li><a href="/stage/paiement/">Paiement</a></li>
-
+        <li><a>{{ current_user.username }}</a></li>
+        <li><a href="/other/deconnexion/"><span class="glyphicon glyphicon-log-out"></span></a></li>
+        {% else %}
+        <li id="tab-connect"><a class="dropdown-toggle" href="/other/connexion/">Connexion  <span class="glyphicon glyphicon-log-in" id="id"></span></a></li>
         {% endif %}
       </ul>
-    </li>
-    <li><a href="/quatuor/concerts/">Concerts</a></li>
-    <li class="dropdown">
-      <a href="#">Autour de la clarinette</a>
-      <ul class="dropdown-menu">
-        <li><a href="/autourClarinette/historique/">Historique</a></li>
-        <li><a href="/autourClarinette/informations/">Informations</a></li>
-      </ul>
-    </li>
-    <li class="dropdown">
-      <a href="#">Contact</a>
-      <ul class="dropdown-menu">
-        <li><a href="/contact/administratif/">Administratif</a></li>
-        <li><a href="/contact/mentionsLegales/">Mentions Legals</a></li>
-        <li><a href="/contact/renseignements/">Renseignements</a></li>
-        <li><a href="/contact/ficheTechnique/">Fiche Technique</a></li>
-        <li><a href="/contact/plaquette/">Plaquette</a></li>
-        <li><a href="/contact/musical/">Musical</a></li>
-      </ul>
-    </li>
-    <li><a href="/other/liens/">Liens</a></li>
-    {% if current_user.is_authenticated %}
-    <li><a>{{ current_user.username }}</a></li>
-    <li><a href="/other/deconnexion/"><span class="glyphicon glyphicon-log-out"></span></a></li>
-    {% else %}
-    <li id="tab-connect"><a href="/other/connexion/">Connexion  <span class="glyphicon glyphicon-log-in" id="id"></span></a></li>
-    {% endif %}
-  </ul>
-</div><!-- /.navbar-collapse -->
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
 {% endblock %}
 
 
