[MOD] form mail admin lié au html

--- a/Developpement/templates/administration/administration_creerStage.html
+++ b/Developpement/templates/administration/administration_creerStage.html
@@ -13,6 +13,10 @@
     <div class="col-sm-3">{{ creaStageForm.intituleSt(size=50, class="form-control", placeholder="Intitule du stage")}}</div>
   </div>
   <div class="form-group">
+    <label for="repSt" class="col-sm-3 control-label">{{creaStageForm.repSt.label}}</label>
+    <div class="col-sm-3">{{ creaStageForm.repSt(class="form-control", placeholder="Repertoire du stage")}}</div>
+  </div>
+  <div class="form-group">
     <label for="nbPlaces" class="col-sm-3 control-label">{{creaStageForm.nbPlaceSt.label}}</label>
     <div class="col-sm-3">{{ creaStageForm.nbPlaceSt(size=50, class="form-control", placeholder="Nombre de place")}}</div>
   </div>
