--- a/Developpement/templates/other/page_liens.html
+++ b/Developpement/templates/other/page_liens.html
@@ -55,7 +55,7 @@
           <p>Buffet Crampon</p>
         </strong>
       </a>
-      <p>Fabriqant français de clarinette</p>
+      <p>Fabricant français de clarinette</p>
     </div>
     <div>
       <a href="https://www.vandoren-fr.com/">
@@ -64,7 +64,7 @@
           <p>Vandoren</p>
         </strong>
       </a>
-      <p>Fabriqant d'accessoires et de partitions</p>
+      <p>Fabricant d'accessoires et de partitions</p>
     </div>
   </div>
 </div>
