--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -52,7 +52,7 @@
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contact <b class="caret"></b></a>
       <ul class="dropdown-menu">
         <li><a href="/contact/administratif/">Administratif</a></li>
-        <li><a href="/contact/mentionsLegales/">Mentions Legals</a></li>
+        <li><a href="/contact/mentionsLegales/">Mentions Legales</a></li>
         <li><a href="/contact/renseignements/">Renseignements</a></li>
         <li><a href="/contact/ficheTechnique/">Fiche Technique</a></li>
         <li><a href="/contact/plaquette/">Plaquettte</a></li>
