page stage_presse

--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -27,7 +27,7 @@
         <li><a href="/stage/presentation/">Présentation</a></li>
         <li><a href="/stage/inscription/">Inscription</a></li>
         <li><a href="/stage/programmes/">Programmes</a></li>
-        <li><a href="/stage/presse/">Presse</a></li>
+        <li><a href="/stage/presse/all/0">Presse</a></li>
         <li><a href="/stage/recettes/">Recettes</a></li>
 
         {% if current_user.is_authenticated %}
