--- a/Developpement/templates/stage/stage_inscription_autorisationMedicale.html
+++ b/Developpement/templates/stage/stage_inscription_autorisationMedicale.html
@@ -49,7 +49,7 @@
                                 <a download="autorisationMedicale.pdf" href="{{ url_for('static',filename='fichier_statique/autorisationMedicale.pdf')}}">Télécharger ce formulaire</a>
                             </li>
                             <li>
-                                <a href="#"><input type="submit" id="submit" class="btn btn-default" value="Valider"></a>
+                                <a href="/stage/inscription/valide"><input type="submit" id="submit" class="btn btn-default" value="Valider"></a>
                             </li>
                         </ul>
                     </div>
