--- a/Developpement/templates/stage/stage_inscription_valide.html
+++ b/Developpement/templates/stage/stage_inscription_valide.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block main %}
-<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/stage/stage_inscription.css')}}">
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/stage/stage_inscription_valide.css')}}">
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/css/base.css')}}">
-
+<h1>Inscription à un Stage</h1>
+<h3>Votre Inscription à bien été prise en compte</h3>
+<a href="/"><button type="button" class="btn btn-default">Revenir à l'accueil</button></a>
 {% endblock %}
