--- a/Developpement/static/styles/css/stage/stage_presse.css
+++ b/Developpement/static/styles/css/stage/stage_presse.css
@@ -1,1 +1,42 @@
- 
+.imagepresse{
+  height: 100%;
+  width: 100%;
+  margin-right: 5%;
+}
+.flex{
+  display: flex;
+}
+
+.article{
+height: 100%;
+width: 100%
+}
+
+.article-titre {
+width: 50%;
+text-align: right;
+margin-left: 25%;
+z-index: 1;
+margin-bottom: 5%
+}
+.article-titre h1{
+  margin-bottom: -5%
+
+}
+
+
+.article-image img{
+z-index: 2;
+height: 50%;
+width: 50%;
+margin-left: 25%;
+border-radius: 2%
+}
+
+.article-text{
+  background-color: rgba(156, 156, 156, 0.22);
+  margin-top: 2.5%;
+  margin-bottom: 2%;
+  margin-left: 10%;
+  margin-right: 10%
+}
