--- a/Developpement/static/styles/css/base.css
+++ b/Developpement/static/styles/css/base.css
@@ -25,27 +25,36 @@ body{
 
 }
 
+@media screen and (min-width: 768px) {
+  .dropdown:hover>.dropdown-menu {
+    display: block;
+  }
+  .navbar:hover .dropdown-toggle:hover{
+    background-color: lightgrey;
+  }
+  .dropdown-toggle:hover p{
+    color: black;
+  }
+
+  .dropdown:hover > .dropdown-menu {
+      display: block;
+  }
+
+  .dropdown-toggle p,.glyphicon{
+    color: white;
+  }
+}
+
 /*  Menu de navigation  */
-.navbar-nav{
+.navbar{
   font-family: 'adam';
   font-size: medium;
-}
-
-.navbar-nav a{
-  color: white;
-}
-
-.navbar{
   background-color: black;
+  border-style: none;
 }
 
-.navbar-nav:hover .dropdown>a:hover{
-  background-color: lightgrey;
-  color: black;
-}
-
-li.dropdown:hover > .dropdown-menu {
-    display: block;
+.dropdown-toggle p,.glyphicon{
+  color: white;
 }
 
 .img-accueil {
