--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -18,12 +18,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Quatuor Divertimento</a>
+      <a class="navbar-brand" href="/"><img src="{{ url_for('static',filename='img/diverti.png') }}" alt="diverti.png" class="img-accueil"> </a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Quatuor <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle active" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><p>Quatuor</p></a>
           <ul class="dropdown-menu">
             <li><a href="/quatuor/presentation/">Présentation</a></li>
             <li><a href="/quatuor/repertoire/">Repertoire</a></li>
@@ -32,7 +32,7 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stage <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><p>Stage</p></a>
           <ul class="dropdown-menu">
             <li><a href="/stage/presentation/">Présentation</a></li>
             <li><a href="/stage/inscription/">Inscription</a></li>
@@ -48,38 +48,41 @@
             <li><a href="/stage/paiement/">Paiement</a></li>
 
             {% endif %}
+
           </ul>
         </li>
-        <li><a class="dropdown-toggle" href="/other/concerts/">Concerts</a></li>
+        <li><a class="dropdown-toggle" href="/quatuor/concerts/"><p>Concerts</p></a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Autour de la clarinette <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><p>Autour de la clarinette</p></a>
           <ul class="dropdown-menu">
             <li><a href="/autourClarinette/historique/">Historique</a></li>
             <li><a href="/autourClarinette/informations/">Informations</a></li>
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contact <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><p>Contact</p></a>
           <ul class="dropdown-menu">
             <li><a href="/contact/administratif/">Administratif</a></li>
             <li><a href="/contact/mentionsLegales/">Mentions Legals</a></li>
             <li><a href="/contact/renseignements/">Renseignements</a></li>
             <li><a href="/contact/ficheTechnique/">Fiche Technique</a></li>
-            <li><a href="/contact/plaquette/">Plaquettte</a></li>
+            <li><a href="/contact/plaquette/">Plaquette</a></li>
             <li><a href="/contact/musical/">Musical</a></li>
           </ul>
         </li>
-        <ul class="nav navbar-nav navbar-right">
-          {% if current_user.is_authenticated %}
-          <li><a>{{ current_user.username }}</a></li>
-          <li><a href="/other/deconnexion/"><span class="glyphicon glyphicon-log-out"></span></a></li>
-          {% else %}
-          <li id="tab-connect"><a class="dropdown-toggle" href="/other/connexion/">Connexion  <span class="glyphicon glyphicon-log-in" id="id"></span></a></li>
-          {% endif %}
-        </ul>
-      </div><!--/.nav-collapse -->
-    </div>
-  </nav>
+        <li><a class="dropdown-toggle" href="/other/liens/"><p>Liens</p></a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        {% if current_user.is_authenticated %}
+        <li><a>{{ current_user.username }}</a></li>
+        <li><a href="/other/deconnexion/"><small><span class="glyphicon glyphicon-log-out"></span></small></a></li>
+        {% else %}
+        <li><a href="/other/connexion/"><small><span class="glyphicon glyphicon-log-in"></span></small></a></li>
+        {% endif %}
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
 {% endblock %}
 
 
