--- a/Developpement/static/styles/css/base.css
+++ b/Developpement/static/styles/css/base.css
@@ -1,4 +1,4 @@
- @font-face{
+@font-face{
   font-family: "Roboto";
   src: url('../../Police/Roboto-Light.ttf');
 }
@@ -15,7 +15,6 @@
 body{
   background-image: url("../../img/imgFond.png");
   background-repeat: no-repeat;
-  background-size: cover;
   background-attachment: fixed;
 }
 
@@ -25,40 +24,38 @@ body{
 
 }
 
-@media screen and (min-width: 768px) {
-  .dropdown:hover>.dropdown-menu {
-    display: block;
-  }
-  .navbar:hover .dropdown-toggle:hover{
-    background-color: lightgrey;
-  }
-  .dropdown-toggle:hover p{
-    color: black;
-  }
-
-  .dropdown:hover > .dropdown-menu {
-      display: block;
-  }
-
-  .dropdown-toggle p,.glyphicon{
-    color: white;
-  }
-}
-
 /*  Menu de navigation  */
-.navbar{
+.navbar-nav{
   font-family: 'adam';
   font-size: medium;
-  background-color: black;
-  border-style: none;
 }
 
-.dropdown-toggle p,.glyphicon{
+.navbar-nav a{
   color: white;
 }
 
+.navbar-nav img{
+  height: 250%;
+  margin-left: -30%;
+  margin-top: -18%;
+}
+
+.navbar-collapse{
+  background-color: black;
+}
+
+.navbar-nav:hover .dropdown-toggle:hover{
+  background-color: lightgrey;
+  color: black;
+}
+
+li.dropdown:hover > .dropdown-menu {
+    display: block;
+}
+
 .img-accueil {
-  height: 100%;
+  height: 150%;
+  width: 150%;
 }
 
 /*  Fin du menu de navigation  */
