inscription + presse stage

--- a/Developpement/templates/stage/stage_inscription.html
+++ b/Developpement/templates/stage/stage_inscription.html
@@ -70,16 +70,16 @@ myvar2 = setInterval('Fage()',10);
                                 <div>{{ form2.prenomResp(size=50, class_="form-control",placeholder="Liam")}}</div>
                             </div>
                             <div class="form-group">
-                                <label for="adrResp">{{ form2.adrResp.label }}</label>
-                                <div>{{ form2.adrResp(size=100, class_="form-control",placeholder="16 Rue Victor Hugo")}}</div>
+                                <label for="adrLieu">{{ form4.adrLieu.label }}</label>
+                                <div>{{ form4.adrLieu(size=100, class_="form-control",placeholder="16 Rue Victor Hugo")}}</div>
                             </div>
                             <div class="form-group">
-                                <label for="CPResp">{{ form2.CPResp.label }}</label>
-                                {{ form2.CPResp(size=100, class_="form-control", pattern="(0-9]{5}", placeholder="45000")}}
+                                <label for="CPLieu">{{ form4.CPLieu.label }}</label>
+                                {{ form4.CPLieu(size=100, class_="form-control", pattern="(0-9]{5}", placeholder="45000")}}
                             </div>
                             <div class="form-group">
-                                <label for="villeResp">{{ form2.villeResp.label }}</label>
-                                <div>{{ form2.villeResp(size=50, class_="form-control", placeholder="Orleans")}}</div>
+                                <label for="villeLieu">{{ form4.villeLieu.label }}</label>
+                                <div>{{ form4.villeLieu(size=50, class_="form-control", placeholder="Orleans")}}</div>
                             </div>
 
                             <div class="form-group">
