--- a/Developpement/static/styles/css/stage/stage_inscription.css
+++ b/Developpement/static/styles/css/stage/stage_inscription.css
@@ -37,7 +37,7 @@ label{
 }
 #submit{
     margin-top:1.5%;
-} 
+}
 .underline{
     width:22%;
     margin-left: 39%;
@@ -48,7 +48,7 @@ label{
     margin-left: 44%;
     margin-top:-1.5%;
 }
-p{
+.p{
     margin-left: -22%;
     width: 90%;
     margin-top:3%;
